# py-rogue-copy

./: .dockerignore  .flake8  .gitignore  .travis.yml  Dockerfile  README.md  abhi_test_rtm_medium.json  data_sources.json  dataset.json  docker-compose.yaml  environment.yml  install_geopandas_win.bat  obliterate_conda_env.sh  pull_request_template.md  pyproject.toml  setup.sh
analysis/: README.md  __init__.py
analysis/bash_scripts/: analyze_FC22_SmallPlot_P1_6-21.sh  analyze_FC22_StripTrial_P1_6-21.sh  analyze_FF1.sh  analyze_FF2.sh  analyze_PF1.sh  build_models_Waterman_7-07.sh  build_models_Waterman_7-10.sh  build_models_Williamsburg_7-06.sh  build_s3_keys_json_FF1.sh  build_s3_keys_json_FF2.sh  build_s3_keys_json_PF1.sh  build_s3_keys_json_Waterman_2023-06-27.sh  build_s3_keys_json_Waterman_2023-07-07.sh  build_s3_keys_json_Waterman_2023-07-10.sh  build_s3_keys_json_Williamsburg_2023-06-21.sh  build_s3_keys_json_Williamsburg_2023-06-28.sh  build_s3_keys_json_Williamsburg_2023-07-06.sh  pull_data_FC22_SmallPlot_P1_6-21.sh  pull_data_FC22_StripTrial_P1_6-21.sh  pull_data_FF1.sh  pull_data_FF2.sh  pull_data_PF1.sh  pull_data_Williamsburg_2023-06-21.sh  run_analysis.sh  run_analysis_FC22_SmallPlot_P1_6-21.sh  run_analysis_FC22_StripTrial_P1_6-21.sh  (+9 more)
data_augmentation/: README.md  __init__.py  augmentation_manager.py  augmentations.py  bbox.py  coco_manager.py  constants.py  run_from_config.py  types.py  utils.py
ddb_tracking/: README.md  grd_api.py  grd_constants.py  grd_structure.py
ground_data_processing/: README.md  __init__.py  _version.py  params.py
(+138 files in other folders)
